# ChangeLog for dev-tex/pythontex
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-tex/pythontex: Add github to remote-id in metadata.xml

*pythontex-0.14-r1 (12 May 2015)

  12 May 2015; Justin Lecher <jlec@gentoo.org> +pythontex-0.14-r1.ebuild,
  -pythontex-0.14.ebuild, pythontex-9999.ebuild:
  dev-tex/pythontex: Fix installation of latex files, bug #548534

*pythontex-0.14 (09 Mar 2015)

  09 Mar 2015; Justin Lecher <jlec@gentoo.org> +pythontex-0.14.ebuild,
  -pythontex-0.12.ebuild, pythontex-9999.ebuild:
  dev-tex/pythontex: Version Bump

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> pythontex-0.12.ebuild,
  pythontex-9999.ebuild, +metadata.xml:
  Switch from git-2 to git-r3