@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Jun 2015; Horea Christian <h.chr@mail.ru> pythontex-0.14-r1.ebuild,
+  pythontex-9999.ebuild:
+  pruned deps
+
   05 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   dev-tex/pythontex: Add github to remote-id in metadata.xml
 
